--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
-  "twrp_branch": "twrp-8.1",
-  "git_username": "voipsy",
-  "git_email": "37921907+voipsy@users.noreply.github.com",
+  "twrp_branch": "twrp-5.1",
+  "git_username": "chenqwq4450",
+  "git_email": "122793161+voipsy@chenqwq4450.noreply.github.com",
   "use_own_dt": true,
-  "dt_url": "azwhikaru/twrp_device_xiaomi_babel",
+  "dt_url": "chenqwq4450/test",
   "dt_branch": "main",
   "dt_remote": "github",
-  "dt_path": "device/xiaomi/Babel",
-  "device_code": "Babel",
+  "dt_path": "device/eebbk/S3",
+  "device_code": "S3",
   "use_omin_head": true,
   "use_repair_manifest": false,
   "fix_product": false,
